tdf#142165 restore a SwShellTableCursor if the orig selection described that

so that we are operating on the same selection that existed when the
dialog was originally launched

we need to avoid the assert of

commit 6db71f70a3b200d4074f6cda8ce445e9861d3296
    tdf#140977 drop possible table-cursor before setting the new one

and support the multi-selection of

commit e08b446e46f56e15af58fdd4396afba1a316f9e5
    tdf#140257 duplicate entire PaM ring when making copy

and support not scrolling to a different location on changing a table
page break style of

commit 9c61732677d038e32b73fc9fb883aced14c0febf
    tdf#135916 just set the target table as selection

and keep making it possible to remove aa page break on a table of

commit 81f91196b98af38e29af451b86c26a893a109abc
    tdf#135636 the selection at dialog-launch time is lost by dialog-apply time

all of which is necessitated by

commit c3a085d22742f88e91ff92f319a26d6e8d1d9a98
    lokdialog: Convert the Table -> Properties... to async exec.

Change-Id: Ide5f953e63da46a8750e85d623310af0062b048b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/115709
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>